<resources>
    <string name="app_name">DarkStoriesAI</string>
    <string name="new_story" >New Story</string>
    <string name="solution">Solution</string>
    <string name="ask">Ask</string>
    <string name="question">Ask a yes or no question</string>
    <string name="back">Back</string>
    <string name="how_to_play">
        1. The AI generates a mystery story for you to solve. Read the story carefully and take note of any clues or details that might be important.\n\n
        2. Once you have read the story, ask the AI a question about it. The AI will only answer yesor noto your questions. Use your questions to gather information and narrow down the possibilities for the solution.\n\n
        3. If you think you know the solution to the mystery, click the Solutionbutton and enter your guess. The AI will then tell you whether your guess is correct or not.</string>
    <string name="how_to_play_menu">How to play?</string>
    <string name="languages">Languages</string>
    <string name="language">English</string>
    <string name="saved_stories">Saved stories</string>
    <string name="load">Load</string>
    <string name="loading">Loading...</string>
    <string name="name">Enter your name</string>
    <string name="logo">logo</string>
    <string name="next">Next</string>
    <string name="spiders">Spiders</string>
    <string name="bugs">Bugs</string>
    <string name="snakes">Snakes</string>
    <string name="sharks">Sharks</string>
    <string name="animal">Which animals are you most afraid of?</string>
    <string name="hospital">Abandoned hospital</string>
    <string name="graveyard">Graveyard</string>
    <string name="house">Abandoned house</string>
    <string name="church">Church</string>
    <string name="place">The scariest place</string>
    <string name="monster">The scariest monster</string>
    <string name="vampire">Vampire</string>
    <string name="werewolf">Werewolf</string>
    <string name="zombie">Zombie</string>
    <string name="skeleton">Skeleton</string>
</resources>