<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondaryColor"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/name"
            android:textColorHint="@color/gray"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/nextButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/primaryColor"
            android:text="@string/next" />


    </LinearLayout>

</LinearLayout>
