<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="3"
    android:padding="16dp"
    android:background="@color/secondaryColor">


    <TextView
        android:layout_width="match_parent"
        android:layout_columnSpan="2"
        android:gravity="center"
        android:text="@string/animal"
        android:textColor="@color/white"
        android:textSize="18sp"
        />

    <LinearLayout
        android:id="@+id/spiders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@color/white"
            android:src="@drawable/fear_spider"
            android:contentDescription="@string/spiders"
            android:padding="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spiders"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bugs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@color/white"
            android:src="@drawable/fear_bug"
            android:contentDescription="@string/bugs"
            android:padding="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bugs"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/snakes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@color/white"
            android:src="@drawable/fear_snake"
            android:contentDescription="@string/snakes"
            android:padding="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/snakes"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sharks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@color/white"
            android:src="@drawable/fear_shark"
            android:contentDescription="@string/sharks"
            android:padding="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sharks"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp"/>
    </LinearLayout>
</GridLayout>
