<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="3"
    android:padding="16dp"
    android:background="@color/secondaryColor">


    <TextView
        android:layout_width="match_parent"
        android:layout_columnSpan="2"
        android:gravity="center"
        android:text="@string/place"
        android:textColor="@color/white"
        android:textSize="18sp"
        />

    <LinearLayout
        android:id="@+id/hospital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@color/white"
            android:src="@drawable/fear_hospital"
            android:contentDescription="@string/hospital"
            android:padding="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hospital"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/graveyard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@color/white"
            android:src="@drawable/fear_grave"
            android:contentDescription="@string/graveyard"
            android:padding="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/graveyard"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/church"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@color/white"
            android:src="@drawable/fear_church"
            android:contentDescription="@string/church"
            android:padding="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/church"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/house"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@color/white"
            android:src="@drawable/fear_house"
            android:contentDescription="@string/house"
            android:padding="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/house"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp"/>
    </LinearLayout>

</GridLayout>
