<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="3"
    android:padding="16dp"
    android:background="@color/secondaryColor">


    <TextView
        android:layout_width="match_parent"
        android:layout_columnSpan="2"
        android:gravity="center"
        android:text="@string/monster"
        android:textColor="@color/white"
        android:textSize="18sp"
        />

    <LinearLayout
        android:id="@+id/vampire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@color/white"
            android:src="@drawable/fear_vampire"
            android:contentDescription="@string/vampire"
            android:padding="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vampire"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/werewolf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@color/white"
            android:src="@drawable/fear_werewolf"
            android:contentDescription="@string/werewolf"
            android:padding="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/werewolf"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/zombie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@color/white"
            android:src="@drawable/fear_zombie"
            android:contentDescription="@string/zombie"
            android:padding="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zombie"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/skeleton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@color/white"
            android:src="@drawable/fear_skeleton"
            android:contentDescription="@string/skeleton"
            android:padding="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/skeleton"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp"/>
    </LinearLayout>
</GridLayout>
